# maemo-map

./: configure.ac  osmgpsmap.pc.in
src/: Makefile.am  main.c  osm-gps-map.c  osm-gps-map.h
